...
                android:src="@drawable/ic_eye"
                app:tint="@color/text_secondary" />
        </LinearLayout>

        <!-- Main "Log in" button:  -->
        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_primary_button"
            android:text="@string/log_in"
            android:textColor="@color/white"
...
