...
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:paddingStart="2dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/iv_comments_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/cd_back"
            android:padding="10dp"
...
